# arkcompiler_toolchain

./: AGENTS.md  BUILD.gn  CODEOWNERS  OAT.xml  README.en.md  README.md  README_zh.md  REVIEWERS  bundle.json  toolchain.gni  toolchain_config.gni
inspector/: AGENTS.md  BUILD.gn  connect_inspector.cpp  connect_inspector.h  connect_server.cpp  connect_server.h  hilog_wrapper.h  init_static.cpp  init_static.h  inspector.cpp  inspector.h  library_loader.cpp  library_loader.h  log_wrapper.cpp  log_wrapper.h  ws_server.cpp  ws_server.h
inspector/test/: BUILD.gn  connect_server_test.cpp  inspector_test.cpp
test/: test_helper.gni
test/autotest/: README.md  pytest.ini  run.py
test/autotest/aw/: __init__.py  all_utils.py  application.py  fport.py  install_lib.py  taskpool.py  toolchain_websocket.py  utils.py  websocket.py
test/autotest/resource/: archive.json
test/autotest/scenario_test/: conftest.py  test_debug_01.py
test/fuzztest/: BUILD.gn
test/fuzztest/backend/: BUILD.gn
test/fuzztest/connectserver_fuzzer/: BUILD.gn
test/fuzztest/connectserverrunserver_fuzzer/: BUILD.gn
test/fuzztest/connectserversendmessage_fuzzer/: BUILD.gn
test/fuzztest/connectserverstopserver_fuzzer/: BUILD.gn
test/fuzztest/dispatcher/: BUILD.gn
test/fuzztest/dispatchprotocolmessage_fuzzer/: BUILD.gn  dispatchprotocolmessage_fuzzer.cpp
test/fuzztest/initializedebugger_fuzzer/: BUILD.gn  initializedebugger_fuzzer.cpp
test/fuzztest/protocolhandler_fuzzer/: BUILD.gn  protocolhandler_fuzzer.cpp
test/fuzztest/protocolhandlercreateerrorreply_fuzzer/: BUILD.gn  protocolhandlercreateerrorreply_fuzzer.cpp
test/fuzztest/protocolhandlerdispatch_fuzzer/: BUILD.gn  protocolhandlerdispatch_fuzzer.cpp
test/fuzztest/protocolhandlerget_fuzzer/: BUILD.gn  protocolhandlerget_fuzzer.cpp
test/fuzztest/protocolhandlernotif_fuzzer/: BUILD.gn  protocolhandlernotif_fuzzer.cpp
test/fuzztest/protocolhandlerprocess_fuzzer/: BUILD.gn  protocolhandlerprocess_fuzzer.cpp
test/fuzztest/protocolhandlerresponse_fuzzer/: BUILD.gn  protocolhandlerresponse_fuzzer.cpp
test/fuzztest/protocolhandlerrun_fuzzer/: BUILD.gn  protocolhandlerrun_fuzzer.cpp
test/fuzztest/protocolhandlersendreply_fuzzer/: BUILD.gn  protocolhandlersendreply_fuzzer.cpp
test/fuzztest/protocolhandlerwait_fuzzer/: BUILD.gn  protocolhandlerwait_fuzzer.cpp
test/fuzztest/pttypesbreakpointparseid_fuzzer/: BUILD.gn  pttypesbreakpointparseid_fuzzer.cpp
test/fuzztest/pttypesbreakpointtostring_fuzzer/: BUILD.gn  pttypesbreakpointtostring_fuzzer.cpp
test/fuzztest/pttypesexceptiondetails_fuzzer/: BUILD.gn  pttypesexceptiondetails_fuzzer.cpp  pttypesexceptiondetails_fuzzer.h
test/fuzztest/pttypesexceptiondetailscolumn_fuzzer/: BUILD.gn  pttypesexceptiondetailscolumn_fuzzer.cpp
test/fuzztest/pttypesexceptiondetailscreate_fuzzer/: BUILD.gn  pttypesexceptiondetailscreate_fuzzer.cpp
test/fuzztest/pttypesexceptiondetailsexception_fuzzer/: BUILD.gn  pttypesexceptiondetailsexception_fuzzer.cpp  pttypesexceptiondetailsexception_fuzzer.h
test/fuzztest/pttypesexceptiondetailsexceptionid_fuzzer/: BUILD.gn  pttypesexceptiondetailsexceptionid_fuzzer.cpp
test/fuzztest/pttypesexceptiondetailsexecutioncontextid_fuzzer/: BUILD.gn  pttypesexceptiondetailsexecutioncontextid_fuzzer.cpp
test/fuzztest/pttypesexceptiondetailsline_fuzzer/: BUILD.gn  (+1 more)
test/ut/: ignore-ut-release-qemu-toolchain-cmc-gc.txt  ignore-ut-release-qemu-toolchain.txt
tooling/: BUILD.gn  debugger_service.cpp  debugger_service.h  dispatcher.cpp  dispatcher.h  protocol_handler.cpp
tooling/agent/: css_impl.cpp  css_impl.h  debugger_impl.cpp  debugger_impl.h  dom_impl.cpp  dom_impl.h  heapprofiler_impl.cpp  heapprofiler_impl.h  overlay_impl.cpp  overlay_impl.h  page_impl.cpp  page_impl.h  profiler_impl.cpp  profiler_impl.h  runtime_impl.cpp  runtime_impl.h  target_impl.cpp  target_impl.h  tracing_impl.cpp  tracing_impl.h
tooling/backend/: debugger_api.cpp  debugger_api.h  debugger_executor.cpp  debugger_executor.h  js_debugger.cpp  js_debugger.h  js_debugger_interface.h  js_pt_extractor.cpp  js_pt_extractor.h  js_pt_hooks.cpp  js_pt_hooks.h  js_single_stepper.cpp  js_single_stepper.h
tooling/base/: pt_base64.cpp  pt_base64.h  pt_events.cpp  pt_events.h  pt_json.cpp  pt_json.h  pt_params.cpp  pt_params.h  pt_returns.cpp  pt_returns.h  pt_script.h  pt_types.cpp  pt_types.h
tooling/client/: BUILD.gn
tooling/dynamic/: AGENTS.md  BUILD.gn  debugger_service.cpp  debugger_service.h  dispatcher.cpp  dispatcher.h  protocol_handler.h
tooling/hybrid_step/: BUILD.gn  frame_info.h  frame_info_extractor.cpp  frame_info_extractor.h  hybrid_single_stepper.cpp  hybrid_single_stepper.h
tooling/interface/: file_stream.cpp  file_stream.h  js_debugger_manager.h  notification_manager.h  stream.h
tooling/static/: AGENTS.md  BUILD.gn  CMakeLists.txt  common.h  debugger_arkapi.cpp  debugger_arkapi.h  error.cpp  init.cpp  init.h  inspector.cpp  inspector.h  inspector_server.cpp  inspector_server.h  session_manager.cpp  session_manager.h  source_manager.h
tooling/test/: BUILD.gn  debugger_cint_client_test.cpp  debugger_cinterp_test.cpp  debugger_client_test.cpp  debugger_entry_test.cpp  debugger_events_test.cpp  debugger_impl_test.cpp  debugger_params_test.cpp  debugger_returns_test.cpp  debugger_service_test.cpp  debugger_types_test.cpp  dispatcher_test.cpp  heapprofiler_impl_test.cpp  js_pt_hooks_test.cpp  profiler_impl_test.cpp  protocol_handler_test.cpp  pt_base64_test.cpp  pt_json_test.cpp  pt_params_test.cpp  pt_returns_test.cpp  pt_types_test.cpp  runtime_impl_test.cpp  tracing_impl_test.cpp
tooling/utils/: utils.cpp
websocket/: AGENTS.md  BUILD.gn  define.h  frame_builder.cpp  frame_builder.h  handshake_helper.cpp  handshake_helper.h  http.cpp  network.cpp  web_socket_frame.h  websocket.cpp  websocket.h  websocket_base.cpp  websocket_base.h
websocket/client/: websocket_client.cpp  websocket_client.h
websocket/server/: websocket_server.cpp  websocket_server.h
websocket/test/: BUILD.gn  frame_builder_test.cpp  http_decoder_test.cpp  web_socket_frame_test.cpp  websocket_test.cpp
(+459 files in other folders)
