# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

toolchain_root = "//arkcompiler//toolchain"
ark_root = "//arkcompiler/runtime_core"
js_root = "//arkcompiler/ets_runtime"
third_party_gn_path = "//third_party"

# For OpenHarmony build, always link with the static lib:
sdk_libc_secshared_dep =
    "$third_party_gn_path/bounds_checking_function:libsec_static"
sdk_libc_secshared_config =
    "$third_party_gn_path/bounds_checking_function:libsec_public_config"
