# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//arkcompiler/toolchain/toolchain.gni")

ohos_source_set("websocket") {
  stack_protector_ret = false
  defines = []
  deps = []

  configs = [ sdk_libc_secshared_config ]
  if (is_mingw || is_mac) {
    cflags = [ "-std=c++17" ]
  }

  # hiviewdfx libraries
  external_deps = hiviewdfx_ext_deps
  deps += hiviewdfx_deps

  if (target_os == "android" && !ark_standalone_build) {
    libs = [ "log" ]
  }

  include_dirs = []

  include_dirs += [
    "$toolchain_root/inspector",
    "//utils/native/base/include",
    "//third_party/openssl/include",
  ]

  sources = [ "websocket.cpp" ]

  deps += [ sdk_libc_secshared_dep ]
  if (is_cross_platform_build && target_os == "ios") {
    deps += [ "$ark_third_party_root/openssl:libcrypto_static" ]
  } else if (is_mingw) {
    deps += [ "$ark_third_party_root/openssl:libcrypto_restool" ]
  } else {
    deps += [ "$ark_third_party_root/openssl:libcrypto_shared" ]
  }

  configs += [ "..:ark_toolchain_common_config" ]

  cflags_cc = [ "-Wno-vla-extension" ]

  subsystem_name = "arkcompiler"
  part_name = "toolchain"
}
