# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

#####################################hydra-fuzz###############################
# import("//arkcompiler/ets_runtime/js_runtime_config.gni")
import("//arkcompiler/toolchain/test/test_helper.gni")
import("//build/config/features.gni")
import("//build/ohos.gni")
import("//build/test.gni")

####################################fuzztest##################################
ohos_fuzztest("InitializeDebuggerFuzzTest") {
  module_out_path = "arkcompiler/toolchain"

  fuzz_config_file =
      "//arkcompiler/toolchain/test/fuzztest/initializedebugger_fuzzer"

  sources = [ "initializedebugger_fuzzer.cpp" ]

  configs = [ "//arkcompiler/toolchain:toolchain_test_config" ]

  deps = [
    "//arkcompiler/ets_runtime:libark_jsruntime",
    "//arkcompiler/toolchain/tooling:libark_ecma_debugger_set",
    "//base/hiviewdfx/hilog/interfaces/native/innerkits:libhilog",
    sdk_libc_secshared_dep,
  ]
}

group("fuzztest") {
  testonly = true
  deps = []
  deps += [ ":InitializeDebuggerFuzzTest" ]
}
