# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//arkcompiler/toolchain/toolchain.gni")

config("hiviewdfx_config") {
  defines = []
  if (enable_dump_in_faultlog) {
    defines += [ "ENABLE_DUMP_IN_FAULTLOG" ]
  }
  if (enable_bytrace) {
    defines += [ "ENABLE_BYTRACE" ]
    cflags_cc = [ "-Wno-gnu-zero-variadic-macro-arguments" ]
  }
  if (enable_hitrace) {
    defines += [ "ENABLE_HITRACE" ]
  }
  if (enable_hilog) {
    defines += [ "ENABLE_HILOG" ]
  }

  include_dirs = [ "$hilog_root/include" ]
}

ohos_executable("toolchain_cli") {
  sources = [ 
    "main.cpp", 
    "cli_command.cpp",
    ]

  include_dirs = [
    "$toolchain_root",
    "$toolchain_root/tooling",
    "$toolchain_root/inspector",
    "$toolchain_root/websocket",
    "$toolchain_root/tooling/client/toolchain_cli",
  ]

  deps = [
    "$toolchain_root/tooling/client:websocket_client",
  ]

  configs = [ ":hiviewdfx_config" ]

  install_enable = false

  part_name = "toolchain"
  subsystem_name = "arkcompiler"
}
