# Copyright (c) 2022-2026 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("../../../test/test_helper.gni")
import("../../../toolchain.gni")

module_output_path = "toolchain/toolchain"

libarkinspector_test_sources = [
    "base64.cpp",
    "debug_info_cache.cpp",
    "inspector_server.cpp",
    "json_object_matcher.cpp",
    "object_repository.cpp",
    "session_manager.cpp",
    "source_manager.cpp",
    "thread_state.cpp"
]

config("libarkinspector_config") {
  cflags_cc = [
    "-fexceptions",
    "-Wno-invalid-offsetof",
    "-Wno-null-pointer-subtraction",
    "-Wno-error=unknown-warning-option",
  ]
  include_dirs = [ "./" ]
  include_dirs += [ "../" ]
  include_dirs += [ "../../" ]
  include_dirs += [ "../../../" ]
  defines = []
  if (enable_hilog) {
    defines += [ "ENABLE_HILOG" ]
  }
  # required for arkcompiler_toolchain compilation
  if (is_ohos) {
    defines += [ "OHOS_PLATFORM" ]
  }
}

ohos_source_set("arkinspector_tests_source") {
  testonly = true
  sources = libarkinspector_test_sources

  configs = [
    ":libarkinspector_config"
  ]
  deps = [
    "../:libarkinspector_plus_static",
  ]
  external_deps = [
    "runtime_core:libarktscompiler",
    "runtime_core:arktsdisassembler",
    "runtime_core:libarktsbase",
    "googletest:gmock",
    "googletest:gtest",
  ]
  part_name = "toolchain"
  subsystem_name = "arkcompiler"
}

host_unittest_action("arkinspector_tests") {
  module_out_path = module_output_path
  deps = [ "./:arkinspector_tests_source" ]

  external_deps = [
    "runtime_core:libarkruntime",
    "runtime_core:arktarget_options",
    "googletest:gtest",
    "googletest:gtest_main",
  ]
}